# yahboomcar_pet_behavior

./: CMakeLists.txt  CONTEXT.md  README.md  README_PRUEBAS.md  package.xml
config/: autopilot_base.yaml  robot_control.yaml
launch/: autopilot_base.launch  pet_robot.launch
scripts/: autopilot_monitor.py  robot_controller.py  robot_status.py
