<?xml version="1.0"?>
<package format="2">
  <name>yahboomcar_pet_behavior</name>
  <version>0.1.0</version>
  <description>Minimal pet behavior layer for monitoring Yahboom autonomous navigation.</description>

  <maintainer email="todo@example.com">todo</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>yahboomcar_msgs</depend>
</package>
